Save local changes

--- a/pytest.ini
+++ b/pytest.ini
@@ -23,6 +23,7 @@ markers =
     performance: Performance and stress tests
     signals: Signal introspection tests
     slow: Slow-running tests
+    core_regression: Core regression pack (panels, stats, position lifecycle)
 
 # Test paths
 testpaths = tests
